--- a/details.html
+++ b/details.html
@@ -1,196 +1,174 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Details — Smart River Health</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Water Health & Index</title>
   <style>
-    body {
-      font-family: "Poppins", sans-serif;
-      background: linear-gradient(180deg, #e0f7fa, #ffffff);
-      color: #023047;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #0093E9 0%, #80D0C7 100%);
+      color: #222;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     header {
-      background: #0077b6;
-      color: white;
-      padding: 25px 0;
-      text-align: center;
-      font-size: 2em;
-      font-weight: 600;
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
+      color: #fff;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
-    nav {
-      background: #023e8a;
-      display: flex;
-      justify-content: center;
-      gap: 25px;
-      padding: 12px 0;
+    header h1 {
+      font-size: 1.8rem;
+      letter-spacing: 1px;
     }
 
     nav a {
-      color: white;
+      color: #fff;
       text-decoration: none;
+      margin-left: 20px;
       font-weight: 500;
-      font-size: 1.05em;
+      transition: color 0.3s ease;
     }
 
     nav a:hover {
-      text-decoration: underline;
+      color: #222;
     }
 
     main {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 30px;
-      background: white;
-      border-radius: 14px;
-      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.1);
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      flex-direction: column;
+      padding: 2rem;
+      width: 100%;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 20px;
+      padding: 2rem 3rem;
+      width: 90%;
+      max-width: 800px;
+      margin: 1rem auto;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+      animation: fadeIn 1.2s ease;
     }
 
     h2 {
-      color: #0077b6;
-      border-left: 6px solid #0077b6;
-      padding-left: 10px;
-      margin-top: 30px;
+      color: #0093E9;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+    }
+
+    h3 {
+      color: #0093E9;
+      margin-top: 1.5rem;
     }
 
     p {
-      font-size: 1.05em;
-      line-height: 1.8;
-      color: #03425a;
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #333;
+      margin-bottom: 1rem;
     }
 
-    .team {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .member {
-      background: #f0faff;
-      border-radius: 10px;
-      padding: 15px;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-    }
-
-    .member h3 {
-      color: #0077b6;
-      margin-bottom: 5px;
-    }
-
-    .goals ul {
-      list-style-type: square;
-      padding-left: 25px;
-      line-height: 1.7;
-      font-size: 1.05em;
-      color: #023047;
+    ul {
+      list-style: disc;
+      margin-left: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     footer {
-      background: #023e8a;
-      color: white;
       text-align: center;
-      padding: 15px 0;
-      margin-top: 40px;
-      font-size: 0.9em;
+      color: #fff;
+      padding: 1rem;
+      background: rgba(0, 0, 0, 0.2);
+      font-size: 0.9rem;
     }
 
-    .quote {
-      background: #caf0f8;
-      border-left: 6px solid #0096c7;
-      padding: 15px;
-      border-radius: 8px;
-      font-style: italic;
-      color: #023047;
-      margin-top: 30px;
-    }
-
-    @media (max-width: 768px) {
-      main {
-        padding: 20px;
-      }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-
-  <header>🌊 Smart River Health Monitoring System — Details</header>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="phchart.html">pH Chart</a>
-    <a href="phcare.html">pH Care</a>
-    <a href="map.html">World Map</a>
-    <a href="details.html" class="active">Details</a>
-  </nav>
+  <header>
+    <h1>Water Health & Index</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="phchart.html">pH Chart</a>
+      <a href="phcare.html">pH Care</a>
+      <a href="map.html">World Map</a>
+      <a href="details.html">Details</a>
+    </nav>
+  </header>
 
   <main>
-    <h2>About the Project</h2>
-    <p>
-      The <strong>Smart River Health Monitoring System</strong> is an initiative designed to help communities and individuals easily
-      monitor the health of their nearby water bodies. By entering or sensing key water quality values like <strong>pH</strong>,
-      <strong>temperature</strong>, and <strong>turbidity</strong>, the system instantly generates a detailed <em>River Health Index</em>.
-      The goal is to increase awareness, enable local action, and empower eco-conscious citizens with real-time water insights.
-    </p>
+    <div class="card">
+      <h2>About This Project</h2>
+      <p>
+        The <strong>Water Health & Index</strong> project is a digital platform that helps users quickly assess the quality of natural water sources using basic, easy-to-measure parameters — <em>pH, temperature,</em> and <em>turbidity</em>. The system instantly provides a <strong>Water Health Index</strong> score and accurate advice on the condition of the water.
+      </p>
 
-    <h2>Why We Built This</h2>
-    <p>
-      Our motivation came from observing the growing number of outdoor adventurers, campers, and field researchers
-      who depend on natural water sources. As pollution and environmental degradation increase, knowing the true
-      condition of river water becomes crucial — not just for safety, but also for sustaining biodiversity.
-      This project bridges science, technology, and environmental responsibility.
-    </p>
+      <h3>🌱 Objective</h3>
+      <p>
+        The main goal is to make water monitoring simple, accessible, and informative for everyone — from students to environmentalists. With just a few inputs, users can identify potential contamination and take steps to preserve water quality.
+      </p>
 
-    <div class="quote">
-      “When we care for the water, we care for life itself. Every drop tested is a promise kept for the future.”
-    </div>
-
-    <h2>Team Credits</h2>
-    <div class="team">
-      <div class="member">
-        <h3>🌟 Sneaky Soul</h3>
-        <p>Lead Designer & Concept Creator</p>
-      </div>
-      <div class="member">
-        <h3>💧 Teammate 1</h3>
-        <p>UI Developer & Data Visualization</p>
-      </div>
-      <div class="member">
-        <h3>🌱 Teammate 2</h3>
-        <p>Environmental Research & Testing</p>
-      </div>
-      <div class="member">
-        <h3>🔬 Teammate 3</h3>
-        <p>Content & Scientific Analysis</p>
-      </div>
-    </div>
-
-    <h2>Our Future Vision</h2>
-    <div class="goals">
+      <h3>⚙️ Key Features</h3>
       <ul>
-        <li>Convert the website into a fully offline progressive web app (PWA).</li>
-        <li>Integrate live map updates to show water quality readings around the world.</li>
-        <li>Use real-time community data to visualize global river health trends.</li>
-        <li>Introduce gamification — users earn badges for eco-friendly actions.</li>
-        <li>Collaborate with schools to teach environmental awareness through this system.</li>
+        <li>Instant water health scoring based on scientific parameters</li>
+        <li>15+ unique advice messages for each range of results</li>
+        <li>Fully responsive web interface for desktop and mobile</li>
+        <li>Interactive pH chart and pH care information</li>
+        <li>Global map visualization for user-submitted data</li>
       </ul>
-    </div>
 
-    <h2>How It Helps the World</h2>
-    <p>
-      With this platform, anyone can easily understand the importance of water balance and its environmental impact.
-      The interactive tools like the <strong>pH chart</strong>, <strong>pH care page</strong>, and <strong>world map</strong>
-      connect science and awareness in a meaningful, accessible way.
-      Our dream is to inspire real-world environmental care through digital innovation.
-    </p>
+      <h3>💡 Why We Created This</h3>
+      <p>
+        With the rise of pollution and outdoor activities, our goal was to empower ordinary people to understand their environment. 
+        This website bridges technology with environmental awareness — making river and lake monitoring easy for schools, communities, and researchers.
+      </p>
+
+      <h3>🚀 Future Development</h3>
+      <p>
+        We plan to develop this into a mobile app that works <strong>offline</strong> and integrates with sensors to automatically detect pH, turbidity, and temperature — allowing real-time environmental analysis without manual data entry.
+      </p>
+
+      <h3>👥 Project Team</h3>
+      <ul>
+        <li><strong>Pranshu</strong> — Project Lead, UI & Logic Designer</li>
+        <li><strong>Shibam Mondal</strong> — Frontend Developer & Data Analyst</li>
+        <li><strong>Dipanjan</strong> — Environmental Research & Parameter Analysis</li>
+        <li><strong>Debjoyti</strong> — UI/UX Designer & Presentation Coordinator</li>
+      </ul>
+
+      <h3>💬 Our Vision</h3>
+      <p>
+        “Clean data for cleaner water.” We believe that technology can be a bridge between awareness and action. 
+        <strong>Water Health & Index</strong> is not just a website — it’s a small step toward protecting our planet’s most vital resource.
+      </p>
+    </div>
   </main>
 
-  <footer>© 2025 AquaGuard Innovators | Smart River Health Project</footer>
+  <footer>
+    &copy; 2025 Water Health & Index | Created by Pranshu, Shibam, Dipanjan & Debjoyti
+  </footer>
 </body>
 </html>
